# esm4ppe

./: LICENSE  README.md  setup.cfg  setup.py
esm4ppe/: __init__.py  calculations.py  classes.py  masks.py  organization.py  processing.py  utils.py  version.py
notebooks/: dev_climatology.ipynb  dev_pkg.ipynb  dev_regionalmeans.ipynb
tutorials/: tutorial_basic.ipynb
