[metadata]
name = esm4ppe
description = Routines for working with ESM4 PPE data on PP/AN.
url = https://github.com/gmacgilchrist/esm4ppe
author = Graeme A. MacGilchrist
author_email = graemem@gmail.com
keywords = oceanography ocean modeling biogeochemistry ecosystem predictability
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **esm4ppe** is a Python package that provides a framework for working
    with the ESM4 perfect predictability experiments carried out at GFDL.

    More Information
    ----------------
    - Source code: `<http://github.com/gmacgilchrist/esm4ppe>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    xarray
